gccida/g3/compute_use_by_pseudos
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/compute_use_by_pseudos/src/reload1.c:1023:1: error: must use 'enum' tag to refer to type 'reg_note'
reg_note v8; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/compute_use_by_pseudos/src/reload1.c:1094:38: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( ( unsigned int)( *( ( _DWORD *)&mode_class_0 + v14) - 5) > 1 ) 
                                     ^~~~~~~~~~~~
                                     mode_class
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/compute_use_by_pseudos/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/compute_use_by_pseudos/src/obj/reload1.o] Error 1
